--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,21 @@
-<<!DOCTYPE html>
-    <html>
+<!doctype html>
+<html>
 
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="chrome">
-        <title>Chatter</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-        <script src="app.js"></script>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Title</title>
+    <meta name="description" content="ToDo">
+    <meta name="author" content="Devin Ragotzy  @devin.ragotzy">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body>
-        <title id="big">Chatter</title>
-        <div id="main">
-            <div id="small">hello</div>
-        </div>
-        <div id="menu:toolbar">
-            <nav id="menu">
-                <input type="search" name="hSearch" id="hSearch">
-                <input type="button" value="HOME" id="home">
-                <input type="button" value="HELP" id="help">
-                <input type="button" value="ABOUT" id="about">
-                <input type="button" value="Wow" id="redBtn">
-            </nav>
-        </div>
-    </body>
+<body>
+    <ul id="messages"></ul>
+    <form action="">
+        <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
+</body>
 
-    </html>
+</html>
