--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,14 @@
 </head>
 
 <body>
-    <ul id="messages"></ul>
-    <form action="">
-        <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
+    <div>
+        <ul id="messages"></ul>
+        <form action="">
+            <input id="m" autocomplete="off" /><button>Send</button>
+        </form>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-
-        socket.on('connect', () => {
-            console.log('connected to server');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('disconnected from server');
-        });
-    </script>
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
