--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-    <div>
-        <ul id="messages"></ul>
-        <form action="">
-            <input id="m" autocomplete="off" /><button>Send</button>
-        </form>
-    </div>
+
+    <ol id="msg-dis-box"></ol>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Message" /><button>Send</button>
+    </form>
+
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
 </body>
