--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
+
 </head>
 
-<body>
+<body class="chat">
 
-    <ol id="msg-dis-box"></ol>
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Message" /><button>Send</button>
-    </form>
+    <div class="chat__sidebar">
+        <h3>People</h3>
+        <div id="users"></div>
+    </div>
+
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
+
+        <div class="chat__footer">
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Message" />
+                <button>Send</button>
+            </form>
+            <button id="send-location">Send location</button>
+        </div>
+    </div>
+
+
 
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
+    <script src="/js/libs/moment/moment.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/libs/mustache.min.js"></script>
+
+    <!-- TEMPLATES -->
+    <script id="message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div class="message__body">
+                <p>{{text}}</p>
+            </div>
+        </li>
+    </script>
 </body>
 
 </html>
