--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,32 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Chatter</title>
-    <meta name="description" content="ToDo">
-    <meta name="author" content="Devin Ragotzy  @devin.ragotzy">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Join | Chatter</title>
     <link rel="stylesheet" href="/style.css">
-
 </head>
 
-<body class="chat">
-
-    <div class="chat__sidebar">
-        <h3>People</h3>
-        <div id="users"></div>
-    </div>
-
-    <div class="chat__main">
-        <ol id="messages" class="chat__messages"></ol>
-
-        <div class="chat__footer">
-            <form id="message-form">
-                <input name="message" type="text" placeholder="Message" />
-                <button>Send</button>
-            </form>
-            <button id="send-location">Send location</button>
-        </div>
-    </div>
-
-
-
-    <script src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/js/libs/moment/moment.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/libs/mustache.min.js"></script>
-
-    <!-- TEMPLATES -->
-    <script id="message-template" type="text/template">
-        <li class="message">
-            <div class="message__title">
-                <h4>{{from}}</h4>
-                <span>{{createdAt}}</span>
+<body class="centered-form">
+    <div class="centered-form__form">
+        <form action="/chat.html">
+            <div class="form-field">
+                <h3>Join a Room</h3>
             </div>
-            <div class="message__body">
-                <p>{{text}}</p>
+            <div class="form-field">
+                <label>Display name</label>
+                <input type="text" name="name" autofocus>
             </div>
-        </li>
-    </script>
+            <div class="form-field">
+                <label>Room name</label>
+                <input type="text" name="room">
+            </div>
+            <div class="form-field"></div>
+            <button>Join</button>
+        </form>
+    </div>
 </body>
 
 </html>
