added utils server modules, fullishly wired up now add features, RELEASED version 0.9.0 almost 1.0

--- a/public/chat.html
+++ b/public/chat.html
@@ -28,7 +28,7 @@
                 <input name="message" type="text" placeholder="Message" />
                 <button>Send</button>
             </form>
-            <button id="send-location">Send location</button>
+            <button id="send-invite">Send invite</button>
         </div>
     </div>
 
@@ -39,6 +39,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
     <script src="/js/libs/mustache.min.js"></script>
+    <script src="/js/libs/deparam.js"></script>
 
     <!-- TEMPLATES -->
     <script id="message-template" type="text/template">
