--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="form-field">
                 <label>Display name</label>
-                <input type="text" name="name" autofocus>
+                <input type="text" name="from" autofocus>
             </div>
             <div class="form-field">
                 <label>Room name</label>
@@ -27,6 +27,10 @@
             <button>Join</button>
         </form>
     </div>
+
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
+    <script src="/js/libs/deparam.js"></script>
+
 </body>
 
 </html>
